--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -782,6 +782,15 @@ body
 
                             ul.active-tg
                             { @extend #SHOW; }
+
+                            .msg-info .msg-operator
+                            {
+                                @extend #LEFT;
+                                max-width: 97%;
+                                border-radius: 0 15px 0 0;
+                                border-left: solid $pink;
+                                padding-right: 20px;
+                            }
                         }
 
                         .msg-operator
