--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -643,7 +643,7 @@ body
                             border-radius: 15px;
                             padding: 15px 20px;
                             min-width: 25%; max-width: 80%;
-                            padding-right: 60px;
+                            padding-right: 65px;
     
                             p
                             {
@@ -786,7 +786,7 @@ body
                             .msg-info .msg-operator
                             {
                                 @extend #LEFT;
-                                max-width: 97%;
+                                max-width: 97%; min-width: 97%;
                                 border-radius: 0 15px 0 0;
                                 border-left: solid $pink;
                                 padding-right: 20px;
@@ -836,6 +836,19 @@ body
                             color: $success;
                         }
 
+                        .picture
+                        {
+                            padding-bottom: 20px;
+
+                            .arquivo img,
+                            .arquivo iframe
+                            {
+                                width: 300px;
+                                background: $navy-silver;
+                                margin-bottom: 10px;
+                                border-radius: 15px 15px 0 0;
+                            }
+                        }
                     }
                 }
 
