--- a/src/css/app.css
+++ b/src/css/app.css
@@ -11144,10 +11144,11 @@ body #interactions .content .area-msg .main-msg .msg-info .msg-client {
 }
 
 body #interactions .content .area-msg .main-msg .msg-info .msg-client ul.toggle-action {
+  text-align: left;
   padding: 5px 0;
   background: #FBFBFB;
-  max-width: 170px;
-  z-index: 1;
+  width: 170px;
+  z-index: 2;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
