--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -742,10 +742,11 @@ body
                             ul.toggle-action
                             {
                                 @extend #ABSOLUTE, #HIDE; 
+                                text-align: left;
                                 padding: 5px 0;
                                 background: $light;
-                                max-width: 170px;
-                                z-index: 1;
+                                width: 170px;
+                                z-index: 2;
                                 -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
                                 -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
                                 box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
