Ajuste no sidebar de contato

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1200,6 +1200,15 @@ body
                     { background: lighten($light, 10%); }
                 }
             }
+            
+            .contact
+            {
+                .info-boxes .ib-gp
+                {
+                    height: initial;
+                    padding-bottom: 20px;
+                }
+            }
         }
     }
 }
