--- a/src/css/app.css
+++ b/src/css/app.css
@@ -11541,3 +11541,8 @@ body #interactions .content .area-add-right .info-boxes .ib-gp:nth-child(odd) {
 body #interactions .content .area-add-right .info-boxes .ib-gp:nth-child(even) {
   background: white;
 }
+
+body #interactions .content .contact .info-boxes .ib-gp {
+  height: initial;
+  padding-bottom: 20px;
+}
