--- a/src/css/app.css
+++ b/src/css/app.css
@@ -11005,6 +11005,9 @@ body #interactions .content .area-msg .tools {
   background: #D8D8D8;
   padding-top: 12px;
   z-index: 2;
+  -webkit-box-shadow: 0px 2px 5px 0px #d9d0d9;
+  -moz-box-shadow: 0px 2px 5px 0px #d9d0d9;
+  box-shadow: 0px 2px 5px 0px #d9d0d9;
 }
 
 body #interactions .content .area-msg .tools .list-info li {
