--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -570,6 +570,10 @@ body
                     padding-top: 12px;
                     z-index: 2;
 
+                    -webkit-box-shadow: 0px 2px 5px 0px rgba(217,208,217,1);
+                    -moz-box-shadow: 0px 2px 5px 0px rgba(217,208,217,1);
+                    box-shadow: 0px 2px 5px 0px rgba(217,208,217,1);
+
                     .btn-group-action
                     {
                         @extend #LEFT;
